[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
description = "Trying to learn Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["cargo"] }
regex = "1.7.1"
trees = "0.4.2"

[toolchain]
channel = "nightly"
